<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dataUsage.DataManagementActivity">

    <EditText
        android:id="@+id/et_enter_city"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_enter_city"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_add_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_of_city"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="220dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_enter_city"
        tools:listitem="@layout/item_city" />

    <Button
        android:id="@+id/btn_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_edit"
        app:layout_constraintBottom_toTopOf="@+id/tv_choose_month_and_temp"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/btn_del"
        app:layout_constraintBottom_toTopOf="@+id/tv_choose_month_and_temp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_choose_month_and_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_month_and_temp"
        app:layout_constraintBottom_toTopOf="@+id/sp_month"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sp_month"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/month"
        app:layout_constraintBottom_toTopOf="@+id/tv_choose_type_of_city"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sp_scale"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/scale_of_temp"
        app:layout_constraintStart_toEndOf="@+id/sp_month"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_month_and_temp" />

    <EditText
        android:id="@+id/et_temp_value"
        android:layout_width="70dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberSigned|numberDecimal"
        android:maxLength="6"
        app:layout_constraintStart_toEndOf="@+id/sp_scale"
        app:layout_constraintTop_toBottomOf="@+id/tv_choose_month_and_temp" />

    <TextView
        android:id="@+id/tv_choose_type_of_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/choose_type"
        app:layout_constraintBottom_toTopOf="@+id/sp_type_of_city"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/sp_type_of_city"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/type_city"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>